2008-05-09  Peter Kjellerstedt  <pkj@axis.com>

	* gst/rtpmanager/rtpsource.c: (rtp_source_finalize):
	Make sure to unref the caps used by RTPSource to prevent a memory leak.

2008-05-08  Tim-Philipp Müller  <tim.muller at collabora co uk>

	Based on patch by: Clive Wright <clive_wright ntlworld com>

	* sys/oss4/oss4-mixer-slider.c: (gst_oss4_mixer_slider_unpack_volume):
	  Apparently mono sliders have the mono value repeated in the upper bits,
	  so mask those out when reading them. Probably makes the mixer applet
	  work properly in some more cases.

2008-05-08  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Olivier Crete <tester at tester dot ca>

	* gst/rtpmanager/rtpsession.c: (source_clock_rate),
	(rtp_session_process_bye), (rtp_session_send_bye_locked):
	Unlock the session lock when calling one of our callbacks. 
	Fixes #532011.

2008-05-08  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Sjoerd Simons <sjoerd at luon dot net>

	* gst/rtpmanager/gstrtpsession.c:
	(gst_rtp_session_event_send_rtp_sink):
	Send RTP BYE command on EOS. Fixes bug #531955.

2008-05-07  Ole André Vadla Ravnås  <ole.andre.ravnas at tandberg com>

	* win32/common/config.h.in:
	  Don't define GST_FUNCTION, if GLib supports MSVC we'd much rather
	  use the real thing than having "???" unconditionally.

2008-05-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/app/.cvsignore:
	* gst-libs/gst/app/Makefile.am:
	* gst-libs/gst/app/gstapp-marshal.list:
	Add marshal.list, make it compile and add to cvsignore.

	* gst-libs/gst/app/gstappsink.c: (gst_app_sink_dispose),
	(gst_app_sink_stop):
	Small cleanups.

	* gst-libs/gst/app/gstappsrc.c: (gst_app_src_class_init),
	(gst_app_src_init), (gst_app_src_set_property),
	(gst_app_src_get_property), (gst_app_src_unlock),
	(gst_app_src_unlock_stop), (gst_app_src_start), (gst_app_src_stop),
	(gst_app_src_create), (gst_app_src_set_caps),
	(gst_app_src_get_caps), (gst_app_src_set_size),